--- a/index.html
+++ b/index.html
@@ -123,13 +123,13 @@
               style="height: 200px; width: 100%; 
 "></video>
             <h3>WHATEVER COLLECTION</h3>
-            <a href="https://kkabdull247.github.io/Abdullah-Khan/" target="_blank" style="color: white !important; font-size: 20px; padding: 5px;">Visit</a>
+            <a href="https://kkabdull247.github.io/Whatever-Collection/" target="_blank" style="color: white !important; font-size: 20px; padding: 5px;">Visit</a>
           </div>
-           <div id="P2" class="project"> <!--<img src="./sports.png" alt="" style="height:200px; width: 100%; "> -->
-            <video src="./4081d5dd599d46a581e5c63b35566f7a.mp4" autoplay muted loop
-            style="height:200px; width: 100%; "></video>
-              <h3>WHATEVER COLLECTION</h3>
-              <a href="" style="color: white !important; font-size: 20px; padding: 5px;">Visit</a>
+           <div id="P2" class="project"> <img src="./P2.png" alt="" style="height:200px; width: 100%; border-top-right-radius: 10px; border-top-left-radius:10px ; ">
+            <!-- <video src="./4081d5dd599d46a581e5c63b35566f7a.mp4" autoplay muted loop
+            style="height:200px; width: 100%; "></video> -->
+              <h3>AK247-COLLECTION</h3>
+              <a href="https://kkabdull247.github.io/AK247-Collections/" target="_blank" style="color: white !important; font-size: 20px; padding: 5px;">Visit</a>
           </div>
           <div id="P3" class="project"><video src="./4081d5dd599d46a581e5c63b35566f7a.mp4" autoplay muted loop
             style="height: 200px; width: 100%; "></video>
